--- a/front/public/css/root.css
+++ b/front/public/css/root.css
@@ -1,5 +1,5 @@
 :root {
-    --header: #adc46d;
+    --header: #b8ce7c;
     --footer: #526a7e;
     --joinFooter: rgb(150, 120, 80);
     --main: #fdfdfd;
