--- a/front/views/layout/footer.html
+++ b/front/views/layout/footer.html
@@ -1,37 +1,28 @@
 {% block footer %}
 <footer id="footerWrap">
     <div id="footer">
-        <div class="footerHeader">
-            <ul>
-                <li><a href="/">홈페이지</a></li>
-                <li><a href="/notice">공지사항</a></li>
-                <li><a href="/board/list">게시판</a></li>
-                <li><a href="/qna">Q & A</a></li>
-                <li><a href="/admin">관리자페이지</a></li>
-            </ul>
-        </div>
         <div class="footerContents">
             <div class="footerLogoWrap">
                 <div class="footerLogo">TeamEzo</div>
             </div>
             <div class="footerContentWrap">
                 <div class="footerContent">
-                    <h2>김홍태</h2>
+                    <h2>Hong_Tae</h2>
                     <div><a href="#"><img src="/img/footer_email.png"></a></div>
                     <div><a href="#"><img src="/img/footer_github.png"></a></div>
-                    <div><a href="#"><img src="/img/footer_call.png"></a></div>
+                    <!-- <div><a href="#"><img src="/img/footer_call.png"></a></div> -->
                 </div>
                 <div class="footerContent">
-                    <h2>이은지</h2>
+                    <h2>Eun_Ji</h2>
                     <div><a href="#"><img src="/img/footer_email.png"></a></div>
                     <div><a href="#"><img src="/img/footer_github.png"></a></div>
-                    <div><a href="#"><img src="/img/footer_call.png"></a></div>
+                    <!-- <div><a href="#"><img src="/img/footer_call.png"></a></div> -->
                 </div>
                 <div class="footerContent">
-                    <h2>강찬수</h2>
+                    <h2>Char1ey</h2>
                     <div><a href="#"><img src="/img/footer_email.png"></a></div>
                     <div><a href="#"><img src="/img/footer_github.png"></a></div>
-                    <div><a href="#"><img src="/img/footer_call.png"></a></div>
+                    <!-- <div><a href="#"><img src="/img/footer_call.png"></a></div> -->
                 </div>
             </div>
         </div>
