--- a/front/public/css/admin/adminUser.css
+++ b/front/public/css/admin/adminUser.css
@@ -113,17 +113,25 @@ table {
 }
 
 .trHeader {
+    height: 5rem;
     font-size: 1.6rem;
     color: var(--main);
     background-color: var(--footer);
 }
 
+.trBody {
+    width: 100%;
+    /* height: 95rem; */
+}
+
 .trBody > td {
     font-size: 1.6rem;
-    height: 7rem;
+    /* height: 7rem; */
     text-align: center;
     border-bottom: 1px solid #ececec;
 }
+
+
 
 .trBody > td > button {
     width: 50%;
