--- a/front/public/css/admin/adminUserEdit.css
+++ b/front/public/css/admin/adminUserEdit.css
@@ -112,7 +112,12 @@
     box-sizing: border-box;
 }
 
-#avatarController > button {
+#avatarController > input {
+    width: 80%;
+    border: none;
+}
+
+/* #avatarController > button {
     padding: 1rem;
     width: 80%;
     font-weight: 700;
@@ -127,7 +132,7 @@
 
 #avatarController > button:hover {
     background-color: var(--footer);
-}
+} */
 
 #profileBox2{
     width: 100%;
