--- a/front/public/css/layout/footer.css
+++ b/front/public/css/layout/footer.css
@@ -1,9 +1,10 @@
 #footerWrap {
     width: 100%;
     height: 25rem;
-    background: var(--joinFooter);
+    /* background: var(--joinFooter); */
     font-size: 2rem;
-    color: var(--main);
+    color: #6e6d7a;
+    border-top: 1px solid #6e6d7a3b;
 }
 
 #footer {
@@ -37,31 +38,37 @@
     width: 100%;
     padding-top: 1rem;
     font-weight: 700;
-    color: var(--main);
+    color: #6e6d7a;
 }
 
 .footerContents {
     width: 100%;
     height: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .footerLogoWrap {
     width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .footerLogo {
     font-size: 6rem;
     font-family: var(--headerFont);
     /* background-color: black; */
-    color: var(--main);
+    color: #6e6d7a;
     text-align: center;
     border-radius: 0.5rem;
 }
 
 .footerContentWrap {
-    width: 30%;
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .footerContent {
@@ -72,7 +79,22 @@
 }
 
 .footerContent > h2 {
-    margin: 0.35rem 1rem;
+    padding: 1rem;
+    margin: 0.35rem 2rem;
+    background-color: #6e6d7a;
+    border-radius: 1rem;
+    color: var(--main);
+    transition: all 0.5s;
+}
+
+.footerContent > h2:hover {
+    border-radius: 0;
+    background-color: black;
+}
+
+.footerContent > div {
+    display: flex;
+    align-items: center;
 }
 
 .footerContent > div > a > img {
