fix: header layout notic&qna url 수정

--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -7,14 +7,14 @@
         <ul class="header_menu">
             <li><a href="/">Home</a></li>
             <li><a href="/board/list">Board</a></li>
-            <li><a href="/notice">Notice</a></li>
-            <li><a href="/qna">Q&A</a></li>
+            <li><a href="/notice/list">Notice</a></li>
+            <li><a href="/qna/list">Q&A</a></li>
         </ul>
     </nav>
     <ul class="header_functions">
         <li class="header_function">
-            <input type="text" class="search_box" placeholder="search">
-            <img src="/img/search.png">
+            <input type="text" class="search_box" placeholder="search" />
+            <img src="/img/search.png" />
         </li>
         {% if token %}
         <li class="header_function profile_box"><a href="/user/profile">Profile</a></li>
