feat:board list 페이징 구현 완료

--- a/front/views/layout/header.html
+++ b/front/views/layout/header.html
@@ -6,9 +6,9 @@
         </div>
         <ul class="header_menu">
             <li><a href="/">Home</a></li>
-            <li><a href="/board/list">Board</a></li>
-            <li><a href="/notice/list">Notice</a></li>
-            <li><a href="/qna/list">Q&A</a></li>
+            <li><a href="/board/list?page=1">Board</a></li>
+            <li><a href="/notice/list?page=1">Notice</a></li>
+            <li><a href="/qna/list?page=1">Q&A</a></li>
         </ul>
     </nav>
     <ul class="header_functions">
