--- a/front/views/board/category/boardList.html
+++ b/front/views/board/category/boardList.html
@@ -40,8 +40,9 @@
                 <div class="listRight">
                     <!-- 상단 고정 부분 -->
                     <div class="top">
-                        <h1>전체글 ({{boardList.length}}개)</h1>
-                        <!-- <button href="#">글쓰기</button> -->
+                        <h1>전체글 ({{listCount}}개)</h1>
+                        <a href="/board/write">글쓰기</a>
+                        <!-- <button href="/board/write">글쓰기</button> -->
                     </div>
 
                     <!-- ALL DATA IN LIST PAGE -->
@@ -79,15 +80,14 @@
                         <div class="boardListPaging">
                             <ul>
                                 <li>
-                                    <a href="#"><button class="listPagingPrev">이전</button></a>
+                                    <a><button class="listPagingPrev">이전</button></a>
                                 </li>
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
+                                {%for number in btnNumber%}
+                                <li><a href="/board/list?page={{number}}">{{number}}</a></li>
+                                {% endfor %}
+                                <input type="hidden" value="{{totalPage}}" id="totalPage" />
                                 <li>
-                                    <a href="#"><button class="listPagingNext">다음</button></a>
+                                    <a><button class="listPagingNext">다음</button></a>
                                 </li>
                             </ul>
                         </div>
