--- a/front/public/css/board/boardList.css
+++ b/front/public/css/board/boardList.css
@@ -1,6 +1,6 @@
 article {
     width: 100%;
-    height: 130rem;
+    /* height: 130rem; */
     background: #f5f5f5;
 }
 
@@ -17,7 +17,7 @@ article {
     margin-top: 10rem;
     float: left;
     min-width: 15%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 #boardListWrap > .listLeft > ul {
@@ -86,7 +86,7 @@ article {
 
 .boardListContents > .boardFindOne {
     margin: 2rem 2rem 0 2rem;
-    height: 7rem;
+    /* height: 7rem; */
     display: flex;
     justify-content: space-between;
 }
@@ -97,7 +97,7 @@ article {
 .boardListContents > .boardFindOne > .boardListPic > img {
     overflow: hidden;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     object-fit: cover;
     border: 0.1rem solid #ececec;
 }
